--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "author": "@ns4lin4s @gnzandrs",
   "license": "MIT",
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/sublimelab/fromchile.git"
+  },
+  "dependencies":{
+    "phaser": "^2.6.2"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
